[package]
name = "rsn"
version = "0.1.0"
authors = ["Nguyễn Việt Hưng <hunggarena12@gmail.com>"]
edition = "2018"

[dependencies]
feed-parser = { path = "./feed-parser" }
readability = "*"
html2text = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "2.0.1"
webbrowser = "0.5.1"

[dependencies.ncurses]
version = "*"
features = ["wide"]